fix(sidenav): fix overflow issue

--- a/app/_assets/stylesheets/index.css
+++ b/app/_assets/stylesheets/index.css
@@ -1030,7 +1030,7 @@ ol:has(code) {
 }
 
 .nav-submenu.nav-submenu--expanded {
-  @apply h-full;
+  @apply h-full overflow-y-auto;
 }
 
 .back-button {
